# irrCAC

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.rst  index.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  irrCAC.rst  quickstart.rst  refs.bib  usage.rst
docs/source/usage/: usage_benchmarking.ipynb  usage_raw_data.ipynb  usage_table_data.ipynb
irrCAC/: __init__.py  benchmark.py  datasets.py  raw.py  table.py  weights.py
test/unit/irrCAC/benchmark/: test_benchmark.py
test/unit/irrCAC/raw/: test_bp.py  test_conger.py  test_fleiss.py  test_gwet.py  test_krippendorff.py
test/unit/irrCAC/table/: test_brennan_prediger.py  test_cohen.py  test_gwet.py  test_krippendorff.py  test_pa.py  test_scott.py
test/unit/irrCAC/weights/: test_weights.py
