[tool.poetry]
name = "irrCAC"
version = "0.2.4"
description = "Degree of agreement among raters."
authors = ["Aris Fergadis"]
keywords = ["Chance-corrected agreement coefficients",
    "Inter-rater reliability",
    "Inter-annotator agreement"
]
readme = "README.rst"
homepage = "https://github.com/afergadis/irrCAC"
repository = "https://github.com/afergadis/irrCAC"
packages = [
    { include="irrCAC", from="." },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.3"
pandas = "^1.3.5"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
yapf = "^0.32.0"
commitizen = "^2.20.4"
jupyter = "^1.0.0"
myst-parser = "^0.16.1"
sphinx-autodoc-typehints = "^1.16.0"
pre-commit = "^2.17.0"
tox = "^3.24.5"
nbsphinx = "^0.8.8"
Pygments = "^2.11.1"
Sphinx = "^4.3.2"
black = "^21.12b0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = ["irrCAC/__init__.py:__version__", "pyproject.toml:version"]
branch = "main"